stop horizontal scroll on mobile devices.

--- a/index.css
+++ b/index.css
@@ -113,3 +113,7 @@ h1{
 .col{
     padding:0px;
 }*/
+.col .row {
+    margin-left: auto;
+    margin-right: auto;
+}
